--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,9 @@ bld/
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
 
+# Extra workaround for nested .vs files
+**/.vs/
+
 # Visual Studio 2017 auto generated files
 Generated\ Files/
 
