--- a/.gitignore
+++ b/.gitignore
@@ -418,3 +418,7 @@ FodyWeavers.xsd
 *.msix
 *.msm
 *.msp
+/MathGameConsoleApp/.vs
+MathGameConsoleApp/.vs/MathGameConsoleApp/v17/DocumentLayout.backup.json
+MathGameConsoleApp/.vs/MathGameConsoleApp/v17/.suo
+MathGameConsoleApp/.vs/MathGameConsoleApp/v17/.futdcache.v2
