--- a/FlashCards/FlashCards/App.config
+++ b/FlashCards/FlashCards/App.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<appSettings>
-		<add key="connectionString" value="Data Source=Flashcards.db" />
+		<add key="connectionString" value="Server=(LocalDB)\LocalDBCSharpAcademy;Database=master;Trusted_Connection=True;" />
 	</appSettings>
 </configuration>
