--- a/FlashCards/FlashCards/App.config
+++ b/FlashCards/FlashCards/App.config
@@ -2,6 +2,6 @@
 <configuration>
 	<appSettings>
 		<add key="masterConnectionString" value="Server=(LocalDB)\LocalDBCSharpAcademy;Database=master;Trusted_Connection=True;" />
-		<add key="masterConnectionString" value="Server=(LocalDB)\LocalDBCSharpAcademy;Database=Flashcards;Trusted_Connection=True;" />
+		<add key="flashcardsConnectionString" value="Server=(LocalDB)\LocalDBCSharpAcademy;Database=Flashcards;Trusted_Connection=True;" />
 	</appSettings>
 </configuration>
