--- a/FlashCards/FlashCards/FlashCards.csproj
+++ b/FlashCards/FlashCards/FlashCards.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.1.66" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.2" />
+    <PackageReference Include="Spectre.Console" Version="0.50.0" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="9.0.6" />
   </ItemGroup>
 
